--- a/src/theme/_fonts.scss
+++ b/src/theme/_fonts.scss
@@ -2,12 +2,12 @@
   font-family: 'Roboto';
   font-weight: 400;
   font-style: normal;
-  src:url('/assets/font/Roboto-Regular.ttf');
+  src:url('../assets/font/Roboto-Regular.ttf');
 }
 
 @font-face {
   font-family: 'Roboto';
   font-weight: 500;
   font-style: normal;
-  src:url('/assets/font/Roboto-Medium.ttf');
+  src:url('../assets/font/Roboto-Medium.ttf');
 }
