--- a/src/app/components/client-edit/client-edit.component.scss
+++ b/src/app/components/client-edit/client-edit.component.scss
@@ -3,17 +3,15 @@
     width: 448px;
     height: 593px;
     padding-top: 40px;
-    p-dialog::ng-deep .p-dialog-header .p-dialog-title{
-        margin-left: 40px;
-    }
+
     .form-item {            
         display: flex;
-        margin-left: 40px;
+        margin: 0 16px;
         input, p-inputMask::ng-deep .p-inputtext {
             padding: 0.75rem;
             margin: 15px 0;
             border-radius: 4px #505662;
-            width: 368px;
+            width: 100%;
             height: 56px;
             font-family: var(--font-family);
             font-weight: 400;
@@ -35,9 +33,5 @@
             background-color: #fff;
             margin-bottom: 0;
         }
-    }
-    .btn-group {
-        margin-top: 40px;
-        margin-left: 180px;
     }
 }
